--- a/_posts/2026-01-19-CSvsCPEN.md
+++ b/_posts/2026-01-19-CSvsCPEN.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CS vs CPEN at UBC: Does the Degree Really Decide Your Future?
+title: "CS vs CPEN at UBC: Does the Degree Really Decide Your Future?"
 date: 2026-01-19 21:00:00 +0000
 permalink: /cs-vs-cpen-ubc/
 description: "Reflections on choosing between Computer Science and Computer Engineering at UBC"
