--- a/_posts/2026-01-19-CSvsCPEN.md
+++ b/_posts/2026-01-19-CSvsCPEN.md
@@ -25,7 +25,9 @@ In fact, if you look at the Applied Science Co-op<sup><a href="#coop">1</a></sup
 
 <img src="https://github.com/ansonnchan/chanblogs/blob/main/assets/imgs/co-op.png"
      alt="Snapshot of CPEN co-op postings" 
-     style="width: 100%; max-width: 600px; height: auto; display: block; margin: 2rem auto;" />
+     style="width: 100%; max-width: 400px; height: auto; display: block; margin: 2rem auto;" />
+
+As you can see above, pretty much all the job postings are in some way related to software. 
 
 When I was debating early in second year whether to switch from CPEN to CS, everyone had *very strong opinions*.  
 My CPEN friends would say a **Bachelor of Applied Science** is more “valuable.”  
